2006-05-31 Borut Razem <borut.razem@siol.net>
	* Implemented enhancement request
	  [ 1496325 ] To bundle the extra modules with gpsim-win32 snapshot
	  makefile.mingw: added targets extras, clean_extras
	  extras/graphic_lcd/makefile.mingw, extras/lcd/makefile.mingw,
	  extras/usart_com/makefile.mingw: introduced GPSIM_LIB_PATH,
	  GPSIM_INCLUDE_PATH, GPSIM_DEF_PATH variables
	  plat/win32/gpsim.nsi: added potion to install extras modules

2006-05-28 Borut Razem <borut.razem@siol.net>
	* src/os_dependent.c, src/modules.h, src/modules.cc,
	  src/sim_context.cc:
	  fixed [ 1488107 ] const violation in get_error_message()

2006-05-29 Robert Pearce <rob@bdt-home.demon.co.uk>
	* regression/resistor/resistor.asm: improved failure reporting
	  and added tests for the output pin not being swamped
	* src/stimuli.cc, src/stimuli.h: Adjusted default Zth values to
	  be more sensible (ZthWeak now > ZthPullUp). Also some debug
	  messages on wht looks like a dodgy condition. Need to follow up.
	* doc/gpsim.lyx: corrected some formatting.

2006-05-28 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: removed unneeded asprintf.dll from
	  the package, added possibility to define the SETUP_DIR from
	  the NSIS command line
	* doc/gpsimWin32.html: glib-2.8.6, gtk+-2.8.17, pango-1.12.1,
	  cairo-1.0.4
	* extras/graphic_lcd/src/gpsim_modules.cc,
	  extras/graphic_lcd/src/sed1520.cc,
	  extras/lcd/hd44780.cc: removed unneeded inclusion of config.h
	* extras/graphic_lcd/makefile.mingw: added, thanks to Xiaofan Chen
	* extras/lcd/makefile.mingw: corrected, thanks to Xiaofan Chen  
	* makefile.mingw: added rules doc and setup
	* plat/win32/fd2raw.cpp: report error messages

2006-05-28 Roy Rankin <rrankin@ihug.com.au>
	* src/gpsim_object.cc: Improve GNU demangling
	* modules/switch.cc, modules/switch.h,
	  regression/switch_test/switch_test.asm:
	- Fix infinite regression bug.

2006-05-27 Scott Dattalo <scott@dattalo.com>
	* src/ValueCollections.cc, src/ValueCollections.h,